<resources>
    <string name="app_name">Braguia</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="pins">Pontos de Interesse</string>
    <string name="maps">Mapa</string>
    <string name="routes">Roteiros</string>
    <string name="settings">Definições</string>
    <string name="internet_connection">Conectado à Internet</string>
    <string name="no_internet_connection">Sem conexão à Internet</string>
    <string name="title_activity_custom_list_view">CustomListView</string>
    <string name="notifications">Notificações</string>
    <string name="todo">TODO</string>
    <string name="invalid_username">Username inválido</string>
    <string name="invalid_password">Password inválido</string>
    <string name="login_description">Faça login para aceder a recursos premium</string>
    <string name="logout_description">Faça logout da sua conta BraGuia.</string>
    <string name="call_permission_recomended">É recomendado permitir chamadas em casos de urgências</string>
    <string name="location_permission_recomended">É recomendado permitir a obtenção da sua localização para melhor experiência</string>
    <string name="trail_duration">Duração: </string>
    <string name="trail_difficulty">Dificuldade: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trail_description">Descrição</string>
    <string name="rel_trail">Mais</string>
    <string name="gallery">Galeria</string>
    <string name="media_not_supported">Media não suportado</string>
    <string name="profile_description">Detalhes do perfil</string>
    <string name="profile">Perfil</string>
    <string name="start_trail">Iniciar roteiro</string>
    <string name="end_trail">Interromper roteiro</string>

</resources>