<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trail.ui.TrailDetailsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/trail_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:clipToPadding="true"
            android:focusable="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/trail_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="5dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <ImageView
                        android:id="@+id/trail_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/todo"
                        android:scaleType="centerCrop"
                        tools:srcCompat="@drawable/header_image" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/trail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_small"
                        android:layout_weight="0"
                        android:contentDescription="@string/todo"
                        android:text="Trail name"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textIsSelectable="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_small"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0"
                            android:contentDescription="@string/trail_duration"
                            android:text="@string/trail_duration"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                        <TextView
                            android:id="@+id/trail_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:contentDescription="@string/todo"
                            android:text="01h30m"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_margin_small"
                        android:layout_weight="0"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0"
                            android:contentDescription="@string/trail_difficulty"
                            android:text="@string/trail_difficulty"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                        <TextView
                            android:id="@+id/trail_difficulty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:contentDescription="@string/todo"
                            android:text="E"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="0"
                        android:background="?android:attr/listDivider" />

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="@dimen/text_margin_small"
                        tools:context=".trail.ui.TrailDescriptionFragment">

                        <TextView
                            android:id="@+id/trail_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?attr/textAppearanceBodySmall"
                            android:text="Descrição" />
                    </androidx.core.widget.NestedScrollView>

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pins" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rel_trail" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>