<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/trail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:clipToPadding="true"
        android:focusable="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/trail_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/header_image" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/trail_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textIsSelectable="true"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/trail_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:contentDescription="@string/todo"
                        android:text="Teste"
                        android:textAppearance="?attr/textAppearanceListItem"
                        android:textIsSelectable="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0"
                            android:contentDescription="@string/trail_duration"
                            android:text="@string/trail_duration"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                        <TextView
                            android:id="@+id/trail_duration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:contentDescription="@string/todo"
                            android:text="Teste"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0"
                            android:contentDescription="@string/trail_difficulty"
                            android:text="@string/trail_difficulty"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                        <TextView
                            android:id="@+id/trail_difficulty"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0"
                            android:contentDescription="@string/todo"
                            android:text="Teste"
                            android:textAppearance="?attr/textAppearanceLabelSmall"
                            android:textIsSelectable="true" />

                    </LinearLayout>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/trail_expand_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="#00F8F6F6"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/arrow_down_float" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/trail_item_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trail_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teste"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textIsSelectable="true" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>